--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,19 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.calendar-container {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.calendar-text {
+  justify-content: space-between;
+  margin: 0 2.5%;
+}
+
+.quick-view-calendar {
+  margin-top: -8px;
+  width: 95%;
+  height: 600px;
+}
