EstimateModal template hard coded

--- a/src/app/_components/EstimateModal/EstimateModal.css
+++ b/src/app/_components/EstimateModal/EstimateModal.css
@@ -1,7 +1,7 @@
 .modal-container {
   width: 90%;
-  background-color: lightgrey;
-  padding: 1em;
+  background-color: #f0f0f0;
+  padding: 2em;
   position: relative;
   top: 20px;
   margin: auto;
